Convert site to Distill for R Markdown
Remove Hugo files and replace with files for a blog-style site using the
Distill for R Markdown platform; see
https://rstudio.github.io/distill/blog.html.

--- a/index.Rmd
+++ b/index.Rmd
@@ -1,3 +1,5 @@
 ---
-site: hugodown:::hugodown_site
+title: "Quantitative Microbiome Measurement"
+site: distill::distill_website
+listing: posts
 ---
