--- a/_posts/mock-design/index.Rmd
+++ b/_posts/mock-design/index.Rmd
@@ -1,14 +1,22 @@
 ---
-title: "Considerations for designing calibration mocks"
-authors: ["Michael McLaren"]
-tags: [
-  "mocks",
-  "experimental design",
-]
-categories: []
-date: "2020-11-17"
-lastmod: "2021-01-23"
+title: "Considerations for designing mock calibration controls"
+description: |
+  Some considerations for designing mock communities to use as calibration
+  controls in community sequencing experiments.
+author:
+  - name: Michael R. McLaren
+    affiliation: North Carolina State University
+    affiliation_url: https://callahanlab.cvm.ncsu.edu/
+categories:
+  - mock communities
+  - experimental design
+  - calibration
+date: 2021-02-06
+lastmod: 2021-02-06
 draft: false
+output:
+  distill::distill_article:
+    self_contained: false
 ---
 
 *Status: Partial draft.*
