--- a/_posts/mock-design/index.Rmd
+++ b/_posts/mock-design/index.Rmd
@@ -17,6 +17,7 @@ draft: false
 output:
   distill::distill_article:
     self_contained: false
+creative_commons: CC BY
 ---
 
 *Status: Partial draft.*
